--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .module-card {
+    @apply hover:shadow-[0px_4px_8px_-1px_rgba(0,0,0,0.05),0px_2px_4px_-2px_rgba(0,0,0,0.05)];
+  }
+}
