--- a/app/globals.css
+++ b/app/globals.css
@@ -117,7 +117,35 @@
     * {
         @apply border-border outline-ring/50;
     }
+
     body {
         @apply bg-background text-foreground;
+    }
+}
+
+
+@layer components {
+    .hero-title {
+        @apply text-[30px] font-medium leading-normal;
+    }
+
+    .title-1 {
+        @apply text-2xl font-medium leading-normal;
+    }
+
+    .title-2 {
+        @apply text-xl font-medium leading-normal;
+    }
+
+    .title-3 {
+        @apply text-lg font-medium leading-normal;
+    }
+
+    .title-4 {
+        @apply text-base font-medium leading-normal;
+    }
+
+    .title-5 {
+        @apply text-sm font-medium leading-normal;
     }
 }
