style: add font setting

--- a/app/globals.css
+++ b/app/globals.css
@@ -148,4 +148,16 @@
     .title-5 {
         @apply text-sm font-medium leading-normal;
     }
+
+    .body-1 {
+        @apply text-base font-normal leading-normal;
+    }
+
+    .body-2 {
+        @apply text-sm font-normal leading-normal;
+    }
+
+    .body-3 {
+        @apply text-xs font-normal leading-normal;
+    }
 }
