--- a/app/globals.css
+++ b/app/globals.css
@@ -165,6 +165,15 @@
     @apply hover:shadow-[0px_4px_8px_-1px_rgba(0,0,0,0.05),0px_2px_4px_-2px_rgba(0,0,0,0.05)];
   }
 
+  .scrollbar-hidden {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+
   .node-settings-header {
     @apply h-[60px] items-center justify-between border-b border-module-border px-4;
   }
